Rename title and heading to reflect the Dice Game

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Trivia</title>
+    <title>Dice Game</title>
 </head>
 <body>
     <div class="container">
-        <h1 class="title"> Welcome to the Dicee Game !</h1>
+        <h1 class="title"> Welcome to the Dice Game !</h1>
 
         <form action="/game" method="get">
             <button type="submit" class="myButton">PLAY</button>
